Passing the secret store as a parameter

--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/main_config.ipynb
@@ -75,7 +75,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_db_selection_ui())"
+    "display(get_db_selection_ui(sb_config))"
    ]
   },
   {
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_db_config_ui())"
+    "display(get_db_config_ui(sb_config))"
    ]
   },
   {
@@ -117,7 +117,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "display(get_start_docker_db_ui())"
+    "display(get_start_docker_db_ui(sb_config))"
    ]
   },
   {
