--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/sme_init.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "%run utils/sme_init_ui.ipynb\n",
-    "display(get_sme_config_ui())"
+    "display(get_sme_config_ui(sb_config))"
    ]
   },
   {
