--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/sagemaker/utils/sme_init_ui.ipynb
@@ -35,20 +35,21 @@
     "from enum import Enum\n",
     "import ipywidgets as widgets\n",
     "\n",
+    "from exasol.secret_store import Secrets\n",
     "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
-    "def get_sme_config_ui() -> widgets.Widget:\n",
+    "def get_sme_config_ui(conf: Secrets) -> widgets.Widget:\n",
     "\n",
     "    inputs = [\n",
-    "        ('Access Key ID', widgets.Password(value=sb_config.get(CKey.aws_access_key_id)), CKey.aws_access_key_id),\n",
-    "        ('Secret Access Key', widgets.Password(value=sb_config.get(CKey.aws_secret_access_key)), CKey.aws_secret_access_key),\n",
-    "        ('Region', widgets.Text(value=sb_config.get(CKey.aws_region)), CKey.aws_region),\n",
-    "        ('Sagemaker AWS Role', widgets.Text(value=sb_config.get(CKey.sme_aws_role)), CKey.sme_aws_role),\n",
-    "        ('Sagemaker S3 Bucket', widgets.Text(value=sb_config.get(CKey.sme_aws_bucket)), CKey.sme_aws_bucket),\n",
+    "        ('Access Key ID', widgets.Password(value=conf.get(CKey.aws_access_key_id)), CKey.aws_access_key_id),\n",
+    "        ('Secret Access Key', widgets.Password(value=conf.get(CKey.aws_secret_access_key)), CKey.aws_secret_access_key),\n",
+    "        ('Region', widgets.Text(value=conf.get(CKey.aws_region)), CKey.aws_region),\n",
+    "        ('Sagemaker AWS Role', widgets.Text(value=conf.get(CKey.sme_aws_role)), CKey.sme_aws_role),\n",
+    "        ('Sagemaker S3 Bucket', widgets.Text(value=conf.get(CKey.sme_aws_bucket)), CKey.sme_aws_bucket),\n",
     "    ]\n",
     "\n",
-    "    return get_generic_config_ui(sb_config, [inputs], ['Set AWS Credentials'])\n"
+    "    return get_generic_config_ui(conf, [inputs], ['Set AWS Credentials'])\n"
    ]
   }
  ],
