--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/te_init.ipynb
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "%run utils/te_init_ui.ipynb\n",
-    "display(get_te_config_ui())"
+    "display(get_te_config_ui(sb_config))"
    ]
   },
   {
