--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/translation.ipynb
@@ -80,7 +80,6 @@
    "execution_count": null,
    "id": "50a8cc23-bba5-4497-8947-9adc8c83a76c",
    "metadata": {
-    "editable": false,
     "slideshow": {
      "slide_type": ""
     },
@@ -91,7 +90,7 @@
    "outputs": [],
    "source": [
     "%run utils/model_retrieval.ipynb\n",
-    "load_huggingface_model(MODEL_NAME)"
+    "load_huggingface_model(sb_config, MODEL_NAME)"
    ]
   },
   {
