--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/model_retrieval.ipynb
@@ -36,12 +36,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_huggingface_model_udf(model_name: str) -> None:\n",
+    "from exasol.secret_store import Secrets\n",
+    "\n",
+    "\n",
+    "def load_huggingface_model_udf(conf: Secrets, model_name: str) -> None:\n",
     "    \"\"\"\n",
     "    Loads specified model into BucketFS using a UDF provided with the Transformer Extension.\n",
-    "    There must be a global variable - sb_config - providing access to the secret store holding\n",
-    "    the configuration data.\n",
     "\n",
+    "    conf           - Access to the secret store holding the configuration data.\n",
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
     "    \"\"\"\n",
     "\n",
@@ -50,16 +52,16 @@
     "    from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "    sql = f\"\"\"\n",
-    "    SELECT {sb_config.get(CKey.db_schema)}.TE_MODEL_DOWNLOADER_UDF(\n",
+    "    SELECT {conf.get(CKey.db_schema)}.TE_MODEL_DOWNLOADER_UDF(\n",
     "        '{model_name}',\n",
-    "        '{sb_config.get(CKey.te_models_bfs_dir)}',\n",
-    "        '{sb_config.get(CKey.te_bfs_connection)}',\n",
-    "        '{sb_config.get(CKey.te_hf_connection)}'\n",
+    "        '{conf.get(CKey.te_models_bfs_dir)}',\n",
+    "        '{conf.get(CKey.te_bfs_connection)}',\n",
+    "        '{conf.get(CKey.te_hf_connection)}'\n",
     "    )\n",
     "    \"\"\"\n",
     "\n",
-    "    with open_pyexasol_connection(sb_config, compression=True) as conn:\n",
-    "        conn.execute(query=get_activation_sql(sb_config))\n",
+    "    with open_pyexasol_connection(conf, compression=True) as conn:\n",
+    "        conn.execute(query=get_activation_sql(conf))\n",
     "        conn.execute(query=sql)"
    ]
   },
@@ -80,12 +82,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_huggingface_model_cli(model_name: str, force_download: bool = False) -> None:\n",
+    "def load_huggingface_model_cli(conf: Secrets, model_name: str, force_download: bool = False) -> None:\n",
     "    \"\"\"\n",
     "    Loads specified model into BucketFS by saving it first to a local drive, as per the command-line interface.\n",
-    "    There must be a global variable - sb_config - providing access to the secret store holding\n",
-    "    the configuration data.\n",
     "\n",
+    "    conf           - Access to the secret store holding the configuration data.\n",
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
     "    force_download - If True the model will be reloaded from the hub even if it has been cached before.\n",
     "    \"\"\"\n",
@@ -97,11 +98,11 @@
     "\n",
     "    # Make a name for the model sub-directory\n",
     "    sub_dir = re.sub(r\"[/\\\\?%*:|\\\"<>\\x7F\\x00-\\x1F]\", \"-\", model_name)\n",
-    "    models_dir = sb_config.get(CKey.te_models_cache_dir)\n",
+    "    models_dir = conf.get(CKey.te_models_cache_dir)\n",
     "    cache_dir = str(Path(models_dir) / sub_dir)\n",
     "\n",
     "    # Upload it to the BucketFS\n",
-    "    upload_model(sb_config, model_name=model_name, cache_dir=cache_dir, force_download=force_download)"
+    "    upload_model(conf, model_name=model_name, cache_dir=cache_dir, force_download=force_download)"
    ]
   },
   {
@@ -121,10 +122,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def load_huggingface_model(model_name: str, method: str = 'cli', force_download: bool = False) -> None:\n",
+    "def load_huggingface_model(conf: Secrets, model_name: str, method: str = 'cli', force_download: bool = False) -> None:\n",
     "    \"\"\"\n",
     "    Loads specified model into BucketFS choosing one of the two available methods.\n",
     "\n",
+    "    conf           - Access to the secret store holding the configuration data.\n",
     "    model_name     - Name of the model at Huggingface hub, e.g. facebook/nllb-moe-54b.\n",
     "    method         - The recognized values are \"udf\" and \"cli\". If the parameter is not set then\n",
     "                     will look for method selection in the configuration. That failed the CLI method\n",
@@ -134,9 +136,9 @@
     "\n",
     "    method = method.lower()\n",
     "    if method == 'udf':\n",
-    "        load_huggingface_model_udf(model_name)\n",
+    "        load_huggingface_model_udf(conf, model_name)\n",
     "    else:\n",
-    "        load_huggingface_model_cli(model_name, force_download=force_download)"
+    "        load_huggingface_model_cli(conf, model_name, force_download=force_download)"
    ]
   },
   {
