--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/transformers/utils/te_init_ui.ipynb
@@ -34,16 +34,17 @@
    "source": [
     "import ipywidgets as widgets\n",
     "\n",
+    "from exasol.secret_store import Secrets\n",
     "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "\n",
     "\n",
-    "def get_te_config_ui() -> widgets.Widget:\n",
+    "def get_te_config_ui(conf: Secrets) -> widgets.Widget:\n",
     "\n",
     "    inputs = [\n",
     "        ('Access token', widgets.Password(value=sb_config.get(CKey.huggingface_token)), CKey.huggingface_token)\n",
     "    ]\n",
     "\n",
-    "    return get_generic_config_ui(sb_config, [inputs], ['Huggingface Access Parameters'])\n"
+    "    return get_generic_config_ui(conf, [inputs], ['Huggingface Access Parameters'])\n"
    ]
   }
  ],
