--- a/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
+++ b/exasol/ds/sandbox/runtime/ansible/roles/jupyter/files/notebook/utils/main_config_ui.ipynb
@@ -35,6 +35,7 @@
    "outputs": [],
    "source": [
     "from typing import List\n",
+    "from exasol.secret_store import Secrets\n",
     "from exasol.ai_lab_config import AILabConfig as CKey\n",
     "import ipywidgets as widgets\n",
     "\n",
@@ -51,17 +52,15 @@
     "    missing = 'Exasol Docker-DB is NOT CREATED'\n",
     "\n",
     "\n",
-    "def get_db_selection_ui() -> widgets.Widget:\n",
+    "def get_db_selection_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    Creates a UI form for choosing between the Exasol Docker-DB and an external Exasol Database.\n",
-    "\n",
-    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
     "    db_options = ['Exasol Docker-DB', 'External Exasol Database']\n",
-    "    db_choice = 0 if sb_config.get(CKey.use_itde, 'True') == 'True' else 1\n",
+    "    db_choice = 0 if conf.get(CKey.use_itde, 'True') == 'True' else 1\n",
     "    db_selector = widgets.RadioButtons(options=db_options, value=db_options[db_choice], \n",
     "                                       layout=ui_look.input_layout, style=ui_look.input_style)\n",
     "    select_btn = widgets.Button(description='Select', style=ui_look.button_style, layout=ui_look.button_layout)\n",
@@ -69,7 +68,7 @@
     "\n",
     "\n",
     "    def select_database(btn):\n",
-    "        sb_config.save(CKey.use_itde, str(db_selector.value == db_options[0]))\n",
+    "        conf.save(CKey.use_itde, str(db_selector.value == db_options[0]))\n",
     "        btn.icon = 'check'\n",
     "\n",
     "    def on_value_change(change):\n",
@@ -84,80 +83,76 @@
     "    return ui\n",
     "\n",
     "\n",
-    "def get_external_db_config_ui() -> widgets.Widget:\n",
+    "def get_external_db_config_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    Creates a UI form for editing an external Exasol Database configuration.\n",
-    "    \n",
-    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Host Name', widgets.Text(value=sb_config.get(CKey.db_host_name, '127.0.0.1')), CKey.db_host_name),\n",
-    "            ('Port', widgets.IntText(value=int(sb_config.get(CKey.db_port, '8888'))), CKey.db_port),\n",
-    "            ('User Name', widgets.Text(value=sb_config.get(CKey.db_user)), CKey.db_user),\n",
-    "            ('Password', widgets.Password(value=sb_config.get(CKey.db_password)), CKey.db_password),\n",
-    "            ('Default Schema', widgets.Text(value=sb_config.get(CKey.db_schema, 'IDA')), CKey.db_schema),\n",
-    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(CKey.db_encryption, 'True') == 'True', indent=False),\n",
+    "            ('Host Name', widgets.Text(value=conf.get(CKey.db_host_name, '127.0.0.1')), CKey.db_host_name),\n",
+    "            ('Port', widgets.IntText(value=int(conf.get(CKey.db_port, '8888'))), CKey.db_port),\n",
+    "            ('User Name', widgets.Text(value=conf.get(CKey.db_user)), CKey.db_user),\n",
+    "            ('Password', widgets.Password(value=conf.get(CKey.db_password)), CKey.db_password),\n",
+    "            ('Default Schema', widgets.Text(value=conf.get(CKey.db_schema, 'IDA')), CKey.db_schema),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=conf.get(CKey.db_encryption, 'True') == 'True', indent=False),\n",
     "                CKey.db_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Host Name', widgets.Text(value=sb_config.get(CKey.bfs_host_name, '127.0.0.1')), CKey.bfs_host_name),\n",
-    "            ('Port', widgets.IntText(value=int(sb_config.get(CKey.bfs_port, '6666'))), CKey.bfs_port),\n",
-    "            ('User Name', widgets.Text(value=sb_config.get(CKey.bfs_user)), CKey.bfs_user),\n",
-    "            ('Password', widgets.Password(value=sb_config.get(CKey.bfs_password)), CKey.bfs_password),\n",
-    "            ('Service Name', widgets.Text(value=sb_config.get(CKey.bfs_service, 'bfsdefault')), CKey.bfs_service),\n",
-    "            ('Bucket Name', widgets.Text(value=sb_config.get(CKey.bfs_bucket, 'default')), CKey.bfs_bucket),\n",
-    "            ('Encrypted Comm.', widgets.Checkbox(value=sb_config.get(CKey.bfs_encryption, 'True') == 'True', indent=False),\n",
+    "            ('Host Name', widgets.Text(value=conf.get(CKey.bfs_host_name, '127.0.0.1')), CKey.bfs_host_name),\n",
+    "            ('Port', widgets.IntText(value=int(conf.get(CKey.bfs_port, '6666'))), CKey.bfs_port),\n",
+    "            ('User Name', widgets.Text(value=conf.get(CKey.bfs_user)), CKey.bfs_user),\n",
+    "            ('Password', widgets.Password(value=conf.get(CKey.bfs_password)), CKey.bfs_password),\n",
+    "            ('Service Name', widgets.Text(value=conf.get(CKey.bfs_service, 'bfsdefault')), CKey.bfs_service),\n",
+    "            ('Bucket Name', widgets.Text(value=conf.get(CKey.bfs_bucket, 'default')), CKey.bfs_bucket),\n",
+    "            ('Encrypted Comm.', widgets.Checkbox(value=conf.get(CKey.bfs_encryption, 'True') == 'True', indent=False),\n",
     "                CKey.bfs_encryption)\n",
     "        ],\n",
     "        [\n",
-    "            ('Validate Certificate', widgets.Checkbox(value=sb_config.get(CKey.cert_vld, 'True') == 'True', indent=False),\n",
+    "            ('Validate Certificate', widgets.Checkbox(value=conf.get(CKey.cert_vld, 'True') == 'True', indent=False),\n",
     "                CKey.cert_vld),\n",
-    "            ('Trusted CA File/Dir', widgets.Text(value=sb_config.get(CKey.trusted_ca)), CKey.trusted_ca),\n",
-    "            ('Certificate File', widgets.Text(value=sb_config.get(CKey.client_cert)), CKey.client_cert),\n",
-    "            ('Private Key File', widgets.Text(value=sb_config.get(CKey.client_key)), CKey.client_key)\n",
+    "            ('Trusted CA File/Dir', widgets.Text(value=conf.get(CKey.trusted_ca)), CKey.trusted_ca),\n",
+    "            ('Certificate File', widgets.Text(value=conf.get(CKey.client_cert)), CKey.client_cert),\n",
+    "            ('Private Key File', widgets.Text(value=conf.get(CKey.client_key)), CKey.client_key)\n",
     "        ]\n",
     "    ]\n",
     "\n",
     "    group_names = ['Database Connection', 'BucketFS Connection', 'TLS/SSL Configuration']\n",
     "\n",
-    "    return get_generic_config_ui(sb_config, inputs, group_names)\n",
+    "    return get_generic_config_ui(conf, inputs, group_names)\n",
     "\n",
     "\n",
-    "def get_docker_db_config_ui() -> widgets.Widget:\n",
+    "def get_docker_db_config_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    Creates a UI form for editing the Exasol Docker-DB configuration.\n",
-    "\n",
-    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
     "    inputs = [\n",
     "        [\n",
-    "            ('Memory Size (GiB)', widgets.IntText(value=int(sb_config.get(CKey.mem_size, '2'))), CKey.mem_size),\n",
-    "            ('Disk Size (GiB)', widgets.IntText(value=int(sb_config.get(CKey.disk_size, '2'))), CKey.disk_size),\n",
-    "            ('Default Schema', widgets.Text(value=sb_config.get(CKey.db_schema, 'IDA')), CKey.db_schema)\n",
+    "            ('Memory Size (GiB)', widgets.IntText(value=int(conf.get(CKey.mem_size, '2'))), CKey.mem_size),\n",
+    "            ('Disk Size (GiB)', widgets.IntText(value=int(conf.get(CKey.disk_size, '2'))), CKey.disk_size),\n",
+    "            ('Default Schema', widgets.Text(value=conf.get(CKey.db_schema, 'IDA')), CKey.db_schema)\n",
     "        ]\n",
     "    ]\n",
     "\n",
     "    group_names = ['Database Configuration']\n",
     "\n",
-    "    return get_generic_config_ui(sb_config, inputs, group_names)\n",
+    "    return get_generic_config_ui(conf, inputs, group_names)\n",
     "\n",
     "\n",
     "\n",
-    "def get_db_config_ui() -> widgets.Widget:\n",
+    "def get_db_config_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    Creates a db configuration UI, depending on the choice of the database.\n",
     "    \"\"\"\n",
     "\n",
-    "    if sb_config.get(CKey.use_itde, 'True') == 'True':\n",
-    "        return get_docker_db_config_ui()\n",
+    "    if conf.get(CKey.use_itde, 'True') == 'True':\n",
+    "        return get_docker_db_config_ui(conf)\n",
     "    else:\n",
-    "        return get_external_db_config_ui()\n",
+    "        return get_external_db_config_ui(conf)\n",
     "\n",
     "\n",
-    "def _get_docker_db_action_buttions(itde_exists: bool, itde_running: bool, \n",
+    "def _get_docker_db_action_buttions(conf: Secrets, itde_exists: bool, itde_running: bool, \n",
     "                                   display_status: widgets.Widget) -> List[widgets.Button]:\n",
     "    \"\"\"\n",
     "    Creates one or two action buttons with the correspondent on_click functions for managing the\n",
@@ -171,12 +166,12 @@
     "        try:\n",
     "            # Need to check if the Exasol Docker-DB still exists and not running because\n",
     "            # the situation might have changed while the the widgets were hanging around.\n",
-    "            itde_exists_now, itde_running_now = is_itde_running(sb_config)\n",
+    "            itde_exists_now, itde_running_now = is_itde_running(conf)\n",
     "            if not itde_running_now:\n",
     "                if itde_exists_now:\n",
-    "                    start_itde(sb_config)\n",
+    "                    start_itde(conf)\n",
     "                else:\n",
-    "                    bring_itde_up(sb_config)\n",
+    "                    bring_itde_up(conf)\n",
     "            # Indicate the successful completion.\n",
     "            display_status.value = ITDEStatus.running.value\n",
     "            btn.icon = 'check'\n",
@@ -187,10 +182,10 @@
     "        try:\n",
     "            # Need to check again if the Exasol Docker-DB exists or not because\n",
     "            # the situation might have changed while the widgets were hanging around.\n",
-    "            itde_exists_now, _ = is_itde_running(sb_config)\n",
+    "            itde_exists_now, _ = is_itde_running(conf)\n",
     "            if itde_exists_now:\n",
-    "                take_itde_down(sb_config)\n",
-    "            bring_itde_up(sb_config)\n",
+    "                take_itde_down(conf)\n",
+    "            bring_itde_up(conf)\n",
     "            # Indicate the successful completion.\n",
     "            display_status.value = ITDEStatus.running.value\n",
     "            btn.icon = 'check'\n",
@@ -213,22 +208,20 @@
     "        return [btn_start]\n",
     "\n",
     "\n",
-    "def get_start_docker_db_ui() -> widgets.Widget:\n",
+    "def get_start_docker_db_ui(conf: Secrets) -> widgets.Widget:\n",
     "    \"\"\"\n",
     "    A UI for starting or restarting the Exasol Docker-DB.\n",
     "    It checks if an instance of the Exasol Docker-DB is already running or if it exists.\n",
     "    In that case a warning is displayed.\n",
-    "\n",
-    "    A global variable `sb_config` should reference a configuration store object.\n",
     "    \"\"\"\n",
     "\n",
-    "    if sb_config.get(CKey.use_itde) != 'True':\n",
+    "    if conf.get(CKey.use_itde) != 'True':\n",
     "        return None\n",
     "\n",
     "    ui_look = get_config_styles()\n",
     "\n",
     "    # Get the current status of the Exasol Docker-DB.\n",
-    "    itde_exists, itde_running = is_itde_running(sb_config)\n",
+    "    itde_exists, itde_running = is_itde_running(conf)\n",
     "\n",
     "    # Display the status.\n",
     "    header_lbl = widgets.Label(style=ui_look.header_style, layout=ui_look.header_layout)\n",
@@ -249,7 +242,7 @@
     "        group_items.append(widgets.Box([warning_html], layout=ui_look.row_layout))\n",
     "\n",
     "    # Create action buttons.\n",
-    "    action_buttons = _get_docker_db_action_buttions(itde_exists, itde_running, header_lbl)\n",
+    "    action_buttons = _get_docker_db_action_buttions(conf, itde_exists, itde_running, header_lbl)\n",
     "    for btn in action_buttons:\n",
     "        btn.style = ui_look.button_style\n",
     "        btn.layout = ui_look.button_layout\n",
@@ -260,20 +253,6 @@
     "    ui = widgets.Box(items, layout=ui_look.outer_layout)\n",
     "    return ui\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e201faac-13f7-4562-857c-0e89f6cf1a0e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e1482248-0f26-4975-8500-ba9cc95b6f5f",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
